[package]
name = "candle_training"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
arrow = "3.0.0"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.1", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.1" }
clap = {version= "4.5.1", features = [ "derive" ]}
env_logger = "0.11.2"
hf-hub = { version = "0.3.2"}
log = "0.4.21"
parquet = "3.0.0"
rand = "0.8.5"
tokenizers = "0.15.2"
serde = "1.0"
serde_json = "1.0.107"
records = "0.2.0"

[[example]]
name = "train_sequence_classification"
